--- a/.github/workflows/build-and-publish-to-pypi.yml
+++ b/.github/workflows/build-and-publish-to-pypi.yml
@@ -1,8 +1,9 @@
 name: Build and publish to pypi
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - 'releases/**'
 
 jobs:
   build_and_publish:
