--- a/.github/workflows/build-and-publish-to-pypi.yml
+++ b/.github/workflows/build-and-publish-to-pypi.yml
@@ -2,8 +2,8 @@ name: Build and publish to pypi
 
 on:
   push:
-    branches:
-      - 'releases/**'
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build_and_publish:
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-python@v2
       - name: Check syntax
         run: python -m py_compile webhook_loghandlers/handlers.py
+      - name: Sync release
+
       - name: Build package
         run: python setup.py build sdist
       - name: Publish package
