--- a/.github/workflows/build-and-publish-to-pypi.yml
+++ b/.github/workflows/build-and-publish-to-pypi.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_and_publish:
-    name: Build package
+    name: Build and Publish Package
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
